# API-for-Indonesian-Holidays

./: .env.example  Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/dto/: api_response.rs  holiday_dto.rs  mod.rs
src/application/use_cases/: get_holidays.rs  mod.rs  scrape_holidays.rs
src/config/: mod.rs
src/domain/entities/: holiday.rs  mod.rs
src/domain/repositories/: holiday_repository.rs  mod.rs
src/domain/services/: holiday_service.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/persistence/: file_repository.rs
src/infrastructure/scheduler/: holiday_scheduler.rs  mod.rs
src/infrastructure/web/handlers/: holiday_handler.rs  mod.rs
src/infrastructure/web/routes/: holiday_routes.rs  mod.rs
src/shared/errors/: app_error.rs
src/shared/utils/: date_utils.rs
