[package]
name = "calendar-indonesia"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
scraper = "0.16"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.14.0", features = ["v4"] }